domain_based/deployment-web1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-nginx
  labels:
    app: web1
  name: web1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web1
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
      - image: cyberdanus/my_app:858eeaa
        name: my-app
        ports:
        - containerPort: 3000
        resources:
            requests:
              cpu: "100m" 
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"             
---
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-nginx
  name: web1 
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: web1
