domain_based/web-ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ingress-nginx
  name: web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: eapp1.testdomain.dom
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web1
              port:
                number: 3000
    - host: eapp2.testdomain.dom
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web2
              port:
                number: 3000 
    - host: eapp3.testdomain.dom
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web3
              port:
                number: 3000
